# assesment-crewai

./: README.md  main.py  pyproject.toml
assesment/: crew.py
assesment/config/: agents.yaml  tasks.yaml
db/: chroma.sqlite3
